--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.ic_logo.assingnment.login"
+        applicationId "com.ic_logo.assignment.login"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
