--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,12 +2,13 @@ name: Build & Publish Debug APK
 
 on:
  push:
-  branches:
-   - master
+  branches: [ master ]
+ pull_request:
+    branches: [ master ]
    
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
     - name: set up JDK 1.8
@@ -18,6 +19,11 @@ jobs:
       run: chmod +x ./gradlew
     - name: Build with Gradle
       run: ./gradlew build
+    - name: run tests
+      uses: reactivecircus/android-emulator-runner@v2
+      with:
+        api-level: 29
+        script: ./gradlew connectedCheck
     - name: Build Debug APK
       run: ./gradlew assembleDebug
     - name: Releasing using Hub
