--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,21 +1,41 @@
 name: Build & Publish Debug APK
 
 on:
- push:
-  branches:
-   - master
-   
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
 jobs:
+  tests:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Make Gradle executable
+        run: chmod +x ./gradlew
+      - name: Build with Gradle
+        run: ./gradlew build
+      - name: run tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 29
+          script: ./gradlew connectedCheck
+
   build:
     runs-on: ubuntu-latest
+    needs: tests
     steps:
-    - uses: actions/checkout@v2
-    - name: set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Make Gradle executable
-      run: chmod +x ./gradlew
+      - uses: actions/checkout@v2
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Make Gradle executable
+        run: chmod +x ./gradlew
     - name: Build with Gradle
       run: ./gradlew build
     - name: Build Debug APK
