--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.karumi.assignment.login">
 
     <application
+        android:name=".LoginAssignmentApplication"
         android:allowBackup="true"
         android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher"
@@ -10,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.karumi.assignment.login.MainActivity">
+        <activity android:name="com.karumi.assignment.login.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,6 +19,6 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.karumi.assignment.login.LoginActivity" />
+        <activity android:name="com.karumi.assignment.login.activity.LoginActivity" />
     </application>
 </manifest>
