--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,11 @@ android:
     - sys-img-armeabi-v7a-android-22
 
 before_script:
+  - chmod +x ./gradlew
   - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
 script:
-  - ./gradlew check
+    ./gradlew checkstyle build test connectedDebugAndroidTest && ./gradlew assembleRelease
