--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,12 @@ android:
     - extra-google-m2repository
     - extra-android-m2repository
     - sys-img-armeabi-v7a-android-22
-
+  licenses:
+    - '.+'
+    
 before_script:
   - chmod +x ./gradlew
+  - echo yes | sdkmanager "build-tools;29.0.2"
   - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
