--- a/.travis.yml
+++ b/.travis.yml
@@ -8,22 +8,21 @@ android:
     - tools
     - platform-tools
     - build-tools-29.0.3
-    - android-22
     - android-29
     - extra-android-support
     - extra-google-m2repository
     - extra-android-m2repository
-    - sys-img-armeabi-v7a-android-22
+    - sys-img-armeabi-v7a-android-29
   licenses:
     - '.+'
 
 before_script:
   - chmod +x ./gradlew
   - echo yes | sdkmanager "build-tools;29.0.3"
-  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-29 --abi armeabi-v7a
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
 script:
-    ./gradlew check build test connectedDebugAndroidTest && ./gradlew assembleRelease
+    ./gradlew check build test connectedAndroidTest && ./gradlew assembleRelease
