--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ android:
     - extra-android-support
     - extra-google-m2repository
     - extra-android-m2repository
-    - system-images;android-29;default;x86
+    - "system-images;android-29;default;x86"
   licenses:
     - '.+'
 
