--- a/.travis.yml
+++ b/.travis.yml
@@ -12,14 +12,13 @@ android:
     - extra-android-support
     - extra-google-m2repository
     - extra-android-m2repository
-    - "system-images;android-29;default;x86"
   licenses:
     - '.+'
 
 before_script:
   - chmod +x ./gradlew
   - echo yes | sdkmanager "build-tools;29.0.3"
-  - echo no | android create avd --force -n test -k "system-images;android-29;default;x86"
+  - echo no | android create avd --force -n test -k "system-images;android-R;google_apis_playstore;x86"
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
